Some dark mode fixes

--- a/web/styles/theme.scss
+++ b/web/styles/theme.scss
@@ -375,7 +375,15 @@ html[data-theme="dark"] {
     color: rgb(200, 200, 200);
   }
 
-  .sb-saved {
+  .sb-line-h1, .sb-line-h2, .sb-line-h3, .sb-line-h4 {
+    color: #d1d1d1;
+  }
+
+  .sb-frontmatter {
+    background-color: rgb(41, 40, 35, 0.5);
+  }
+
+  .sb-saved > input {
     color: rgb(225, 225, 225);
   }
 
@@ -421,6 +429,13 @@ html[data-theme="dark"] {
 
   .sb-command-link {
     background-color: #595959;
+  }
+
+  .sb-table-widget {
+    
+    tbody tr:nth-of-type(even) {
+        background-color: #686868;
+    }
   }
 
 
